cli/src/tests/error/each.sibs
each ($file) [ tgz ./release/{$file}; ];
each ($file) $files [ ];
each ($file) abc [ tgz ./release/{$file}; ];
each ($file) abc() abs() [ tgz ./release/{$file}; ];
each (abs()) abc() [ tgz ./release/{$file}; ];
each (abs) abc() [ tgz ./release/{$file}; ];
each () abc() [ tgz ./release/{$file}; ];
each [$var] abc() [ tgz ./release/{$file}; ];
each [ tgz ./release/{$file}; ];
each;